# snooptop

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/: bpf_engine.cpp  bpf_engine.h
src/bpf/: snooptop.bpf.c
src/core/: process_event.h
